package com.algonquin.cst8288.assignment1.controller;

/**
 * Class that has the rates for calculation.
 */
public class Rate {
    public static final double BONUS_RATE = 0.025;
    public static final double PENSION_RATE = 0.01;
}
